Fix: Make all listings page responsive
-Remove extra space to the right when viewport decreases

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ body{
 .navbar{
     height: 80px;
     font-size: 1.2rem;
-    margin-bottom: 50px !important;
+    margin-bottom: 30px !important;
 }
 .f-link{
     text-decoration: none ;
@@ -39,7 +39,12 @@ body{
     font-size: 14px;
 }
 .card-container{
-    padding-left: 40px !important;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    /* overflow-x: hidden !important; */
 }
 .card{
     border:none !important;
